--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <commons.lang.version>3.1</commons.lang.version>
         <commoms.io.vesion>1.3.2</commoms.io.vesion>
         <commons.beanutils.version>1.9.2</commons.beanutils.version>
-        <log4j.version>2.4.1</log4j.version>
+        <log4j.version>1.2.17</log4j.version>
         <junit.version>4.11</junit.version>
         <cglib.version>3.1</cglib.version>
         <compiler.plugin.version>2.3.2</compiler.plugin.version>
@@ -87,15 +87,10 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
-        <!--Log4j 2-->
+        <!--Log4j-->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
         <!--junit-->
@@ -179,6 +174,8 @@
                                     <fileset dir="src/main/resources/">
                                         <include name="*.properties"/>
                                         <include name="*.xml"/>
+                                        <include name="*.dld"/>
+                                        <include name="*.txt"/>
                                     </fileset>
                                 </copy>
                                 <copy todir="target/classes" overwrite="true">
@@ -217,7 +214,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>org.misha.Launcher</mainClass>
+                            <mainClass>org.misha.request.Launcher</mainClass>
                             <classpathPrefix> . config/ lib/</classpathPrefix>
                         </manifest>
                         <manifestEntries>
